<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="10dp"
    android:elevation="5dp"
    android:background="@color/colorPrimary"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@color/colorPrimary"
            tools:context=".SelectBreadActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/fav"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="80dp"
                android:text="@string/desc_frenchbread"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/im_frenchbread"
                android:layout_width="330dp"
                android:layout_height="160dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="120dp"
                android:adjustViewBounds="true"
                android:background="@color/white"
                android:clickable="true"
                android:contentDescription="@string/desc_frenchbread" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="300dp"
                android:text="@string/desc_cheesebread"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/im_cheesebread"
                android:layout_width="330dp"
                android:layout_height="160dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="340dp"
                android:adjustViewBounds="true"
                android:background="@color/white"
                android:clickable="true"
                android:contentDescription="@string/desc_cheesebread" />

            <Button
                android:id="@+id/btAllSet"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="520dp"
                android:background="@color/orangebutton"
                android:text="@string/letmeknow"
                android:textColor="@color/white" />


        </RelativeLayout>
    </LinearLayout>
</ScrollView>